new script to compute statistics included